{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 14,
  "lineage": "36b072a4-21e7-232f-fef1-854c7da1491e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00cc3baca5fbbd9da",
            "arn": "arn:aws:ec2:us-east-1:619577151605:elastic-ip/eipalloc-00cc3baca5fbbd9da",
            "association_id": "eipassoc-0ba570a0e6dbafe51",
            "domain": "vpc",
            "id": "eipalloc-00cc3baca5fbbd9da",
            "instance": "i-0d6367e257d7c96e0",
            "network_border_group": "us-east-1",
            "network_interface": "eni-09f0d42f151f9ace5",
            "private_dns": "ip-10-0-1-163.ec2.internal",
            "private_ip": "10.0.1.163",
            "public_dns": "ec2-52-200-150-182.compute-1.amazonaws.com",
            "public_ip": "52.200.150.182",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Cost": "Free",
              "Environment": "development",
              "Name": "legato-free-eip",
              "Project": "legato-free"
            },
            "tags_all": {
              "Cost": "Free",
              "Environment": "development",
              "Name": "legato-free-eip",
              "Project": "legato-free"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_instance.web",
            "aws_internet_gateway.main",
            "aws_s3_bucket.assets",
            "aws_security_group.web",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.amazon_linux",
            "data.aws_availability_zones.available",
            "random_string.bucket_suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ad253013fad0a42a",
            "arn": "arn:aws:ec2:us-east-1:619577151605:instance/i-0d6367e257d7c96e0",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d6367e257d7c96e0",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "legato-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-09f0d42f151f9ace5",
            "private_dns": "ip-10-0-1-163.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.163",
            "public_dns": "ec2-174-129-145-79.compute-1.amazonaws.com",
            "public_ip": "174.129.145.79",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 100,
                "kms_key_id": "arn:aws:kms:us-east-1:619577151605:key/afffaf94-8cde-477c-8102-44295940613d",
                "tags": {
                  "Cost": "Free",
                  "Environment": "development",
                  "Name": "legato-free-root-volume",
                  "Project": "legato-free"
                },
                "tags_all": {
                  "Cost": "Free",
                  "Environment": "development",
                  "Name": "legato-free-root-volume",
                  "Project": "legato-free"
                },
                "throughput": 0,
                "volume_id": "vol-012b7f48d7ddca5a4",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05ce7ac0945ed39ae",
            "tags": {
              "Cost": "Free",
              "Environment": "development",
              "Name": "legato-free-web-server",
              "Project": "legato-free"
            },
            "tags_all": {
              "Cost": "Free",
              "Environment": "development",
              "Name": "legato-free-web-server",
              "Project": "legato-free"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0f15684c6514138c6"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_s3_bucket.assets",
            "aws_security_group.web",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.amazon_linux",
            "data.aws_availability_zones.available",
            "random_string.bucket_suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:619577151605:internet-gateway/igw-00c66ee7e156dce57",
            "id": "igw-00c66ee7e156dce57",
            "owner_id": "619577151605",
            "tags": {
              "Cost": "Free",
              "Environment": "development",
              "Name": "legato-free-igw",
              "Project": "legato-free"
            },
            "tags_all": {
              "Cost": "Free",
              "Environment": "development",
              "Name": "legato-free-igw",
              "Project": "legato-free"
            },
            "vpc_id": "vpc-0d5b599032ed6fe27"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:619577151605:route-table/rtb-09dc17fabc22af183",
            "id": "rtb-09dc17fabc22af183",
            "owner_id": "619577151605",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-00c66ee7e156dce57",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Cost": "Free",
              "Environment": "development",
              "Name": "legato-free-public-rt",
              "Project": "legato-free"
            },
            "tags_all": {
              "Cost": "Free",
              "Environment": "development",
              "Name": "legato-free-public-rt",
              "Project": "legato-free"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d5b599032ed6fe27"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0839b3c99db0f6f66",
            "route_table_id": "rtb-09dc17fabc22af183",
            "subnet_id": "subnet-05ce7ac0945ed39ae"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:619577151605:security-group/sg-0f15684c6514138c6",
            "description": "Security group for web server",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f15684c6514138c6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Next.js",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "legato-free-web-20250803113602819900000001",
            "name_prefix": "legato-free-web-",
            "owner_id": "619577151605",
            "revoke_rules_on_delete": false,
            "tags": {
              "Cost": "Free",
              "Environment": "development",
              "Name": "legato-free-web-sg",
              "Project": "legato-free"
            },
            "tags_all": {
              "Cost": "Free",
              "Environment": "development",
              "Name": "legato-free-web-sg",
              "Project": "legato-free"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d5b599032ed6fe27"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:619577151605:subnet/subnet-05ce7ac0945ed39ae",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05ce7ac0945ed39ae",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "619577151605",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Cost": "Free",
              "Environment": "development",
              "Name": "legato-free-public-subnet",
              "Project": "legato-free"
            },
            "tags_all": {
              "Cost": "Free",
              "Environment": "development",
              "Name": "legato-free-public-subnet",
              "Project": "legato-free"
            },
            "vpc_id": "vpc-0d5b599032ed6fe27"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:619577151605:vpc/vpc-0d5b599032ed6fe27",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0cf5344bad3646369",
            "default_route_table_id": "rtb-04d56473721899058",
            "default_security_group_id": "sg-0dc86834d5e24c6ec",
            "dhcp_options_id": "dopt-01196d4ed1d38ae88",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d5b599032ed6fe27",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04d56473721899058",
            "owner_id": "619577151605",
            "tags": {
              "Cost": "Free",
              "Environment": "development",
              "Name": "legato-free-vpc",
              "Project": "legato-free"
            },
            "tags_all": {
              "Cost": "Free",
              "Environment": "development",
              "Name": "legato-free-vpc",
              "Project": "legato-free"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}